Fix navigation sidebar
On some platforms (i.e. Firefox for Windows), the scrollbar was shown
regardless of whether it was necessary.

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -112,7 +112,7 @@ div#navi {
   bottom: 0;
   width: 100px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   background-color: #303030;
   scrollbar-color: #808080 #303030;
 }
